# pythonx

./: .gitignore  CMakeLists.txt  Makefile  README.md  mix.exs
.github/workflows/: ci.yml  precompile.yml
c_src/: nif_utils.hpp  pyobject_nif_res.hpp  pythonx.cpp  pythonx_consts.hpp  pythonx_pyanyset.hpp  pythonx_pydict.hpp  pythonx_pyerr.hpp  pythonx_pyeval.hpp  pythonx_pyfloat.hpp  pythonx_pyfrozenset.hpp  pythonx_pyindex.hpp  pythonx_pylist.hpp  pythonx_pylong.hpp  pythonx_pynumber.hpp  pythonx_pyobject.hpp  pythonx_pyrun.hpp  pythonx_pyset.hpp  pythonx_pytuple.hpp  pythonx_pyunicode.hpp  pythonx_utils.hpp
lib/: c.ex  pybeam.ex  pythonx.ex  pythonx_beam.ex  pythonx_nif.ex
lib/beam/: pydict.ex  pyerr.ex  pyfloat.ex  pylist.ex  pylong.ex  pynumber.ex  pyobject.ex  pyrun.ex  pyset.ex  pytuple.ex  pyunicode.ex  state.ex
lib/c/: py_compiler_flags.ex  pyanyset.ex  pydict.ex  pyerr.ex  pyeval.ex  pyfloat.ex  pyfrozenset.ex  pyindex.ex  pylist.ex  pylong.ex  pynumber.ex  pyobject.ex  pyrun.ex  pyset.ex  pytuple.ex  pyunicode.ex
lib/codec/: codec.ex  decoder.ex  encoder.ex
lib/pythonx/: pyrun.ex  state.ex
lib/raw/: pyerr.ex  pylist.ex  pyobject.ex  pytuple.ex  pyunicode.ex
scripts/: download_precompiled_libpython3.sh
test/: pybeam_test.exs  pythonx_beam_test.exs  pythonx_c_test.exs  pythonx_inline_test.exs  pythonx_session_test.exs  pythonx_test.exs  test_helper.exs
test/c/: pyanyset_test.exs  pydict_test.exs  pyfloat_test.exs  pyfrozenset_test.exs  pyindex_test.exs  pylong_test.exs  pynumber_test.exs  pyobject_test.exs  pyrun_test.exs  pyset_test.exs  pytuple_test.exs  pyunicode_test.exs
test/codec/: decoder_test.exs  encoder_test.exs
test/raw/: pylist.exs  pylist_test.exs  pyobject_test.exs  pyunicode_test.exs
